JVM 垃圾收集器-并行垃圾回收器的额外新生代 GC。